fix  margin of pics

--- a/05-regression.Rmd
+++ b/05-regression.Rmd
@@ -1,6 +1,6 @@
 # Linear Regression
 
-![](images/econometrics.PNG){width="100%"}
+![](images/econometrics.PNG){width="600" height="250"}
 
 -   Estimating parameters -\> parametric (finite parameters)
 -   Estimating functions -\> non-parametric
@@ -588,8 +588,6 @@ $$
 
 If $\beta_0$ and $\beta_1$ have separate 95% confidence intervals, the joint (family) confidence coefficient is at least $1 - 2(0.05) = 0.9$. This is called a **Bonferroni Inequality**
 
-
-
 We could use a procedure in which we obtained $1-\alpha/2$ confidence intervals for the two regression parameters separately, then the joint (Bonferroni) family confidence coefficient would be at least $1- \alpha$
 
 The $1-\alpha$ joint Bonferroni confidence interval for $\beta_0$ and $\beta_1$ is given by calculating:
@@ -814,14 +812,14 @@ If we don't know $f(\mu)$
 3.  If you have multiple observations $Y_{ij}$ at the same X values, compute $\bar{Y}_i$ and $s_i$ and plot them\
     If $s_i \propto \bar{Y}_i^{\lambda}$ then consider $s_i = a \bar{Y}_i^{\lambda}$ or $ln(s_i) = ln(a) + \lambda ln(\bar{Y}_i)$. So regression the natural log of $s_i$ on the natural log of $\bar{Y}_i$ gives $\hat{a}$ and $\hat{\lambda}$ and suggests the form of $f(\mu)$ If we don't have multiple obs, might still be able to "group" the observations to get $\bar{Y}_i$ and $s_i$.
 
-| Transformation             | Situation                              | Comments                               |
+| Transformation            | Situation                              | Comments                               |
 |------------------|---------------------------|---------------------------|
-| $\sqrt{Y}$                 | $var(\epsilon_i) = k E(Y_i)$           | counts from Poisson dist               |
-| $\   sqrt{Y} + \sqrt{Y+1}$ | $var(\epsilon_i) = k E(Y_i)$           | small counts or zeroes                 |
-| $log(Y)$                   | $var(\epsilon_i) = k (E(Y_i))^2$       | positive integers with wide range      |
-| $log(Y+1)$                 | $var(\epsilon_i) = k(E(Y_i))^2$        | some counts zero                       |
-| 1/Y                        | $var(\epsilon_i) = k(E(Y_i))^4$        | most responses near zero, others large |
-| $arcsin(\sqrt{Y})$         | $var(\epsilon_i) = k E(Y_i)(1-E(Y_i))$ | data are binomial proportions or %     |
+| $\sqrt{Y}$                | $var(\epsilon_i) = k E(Y_i)$           | counts from Poisson dist               |
+| $\  sqrt{Y} + \sqrt{Y+1}$ | $var(\epsilon_i) = k E(Y_i)$           | small counts or zeroes                 |
+| $log(Y)$                  | $var(\epsilon_i) = k (E(Y_i))^2$       | positive integers with wide range      |
+| $log(Y+1)$                | $var(\epsilon_i) = k(E(Y_i))^2$        | some counts zero                       |
+| 1/Y                       | $var(\epsilon_i) = k(E(Y_i))^4$        | most responses near zero, others large |
+| $arcsin(\sqrt{Y})$        | $var(\epsilon_i) = k E(Y_i)(1-E(Y_i))$ | data are binomial proportions or %     |
 
 ### Multiple Linear Regression
 
@@ -881,7 +879,7 @@ $$
 where $H_1 = \frac{1}{n} J = 1'(1'1)1$
 
 | Source     | SS                                    | df      | MS           | F          |
-|-------------|--------------------|-------------|-------------|-------------|
+|--------------|----------------|--------------|--------------|--------------|
 | Regression | $SSR = \mathbf{y' (H-\frac{1}{n}J)y}$ | $p - 1$ | $SSR/(p-1)$  | $MSR /MSE$ |
 | Error      | $SSE = \mathbf{y'(I - H)y}$           | $n - p$ | $SSE /(n-p)$ |            |
 | Total      | $\mathbf{y'y - y'Jy/n}$               | $n -1$  |              |            |
@@ -963,14 +961,12 @@ $$
 
 #### A1 Linearity {#a1-linearity}
 
-
+```{=tex}
 \begin{equation}
 A1: y=\mathbf{x}\beta + \epsilon
 (\#eq:A1)
 \end{equation}
-
-
-
+```
 Not restrictive
 
 -   $x$ can be nonlinear transformation including interactions, natural log, quadratic
@@ -980,7 +976,7 @@ With A3 (Exogeneity of Independent), linearity can be restrictive
 ##### Log Model
 
 | Model       | Form                                         | Interpretation of $\beta$             | In words                                                              |
-|----------------|-------------------|----------------|---------------------|
+|-----------------|------------------|-----------------|--------------------|
 | Level-Level | $y =\beta_0+\beta_1x+\epsilon$               | $\Delta y = \beta_1 \Delta x$         | A unit change in $x$ will result in $\beta_1$ unit change in $y$      |
 | Log-Level   | $ln(y) = \beta_0 + \beta_1x + \epsilon$      | $\% \Delta y=100 \beta_1 \Delta x$    | A unit change in $x$ result in 100 $\beta_1$ % change in $y$          |
 | Level-Log   | $y = \beta _0 + \beta_1 ln (x) + \epsilon$   | $\Delta y = (\beta_1/ 100)\%\Delta x$ | One percent change in $x$ result in $\beta_1/100$ units change in $y$ |
@@ -1007,14 +1003,12 @@ $y=\beta_0 + x_1\beta_1 + x_2\beta_2 + x_1x_2\beta_3 + \epsilon$
 
 #### A2 Full rank {#a2-full-rank}
 
-
+```{=tex}
 \begin{equation}
 A2: rank(E(x'x))=k
 (\#eq:A2)
 \end{equation}
-
-
-
+```
 also known as **identification condition**
 
 -   columns of $\mathbf{x}$ cannot be written as a linear function of the other columns
@@ -1022,14 +1016,12 @@ also known as **identification condition**
 
 #### A3 Exogeneity of Independent Variables {#a3-exogeneity-of-independent-variables}
 
-
+```{=tex}
 \begin{equation}
 A3: E[\epsilon|x_1,x_2,...,x_k]=E[\epsilon|\mathbf{x}]=0
 (\#eq:A3)
 \end{equation}
-
-
-
+```
 **strict exogeneity**
 
 -   also known as **mean independence** check back on [Correlation and Independence]
@@ -1055,26 +1047,22 @@ A3a: $E(\mathbf{x_i'}\epsilon_i)=0$
 
 #### A4 Homoskedasticity {#a4-homoskedasticity}
 
-
+```{=tex}
 \begin{equation}
 A4: Var(\epsilon|x)=Var(\epsilon)=\sigma^2
 (\#eq:A4)
 \end{equation}
-
-
-
+```
 -   Variation in the disturbance to be the same over the independent variables
 
 #### A5 Data Generation (random Sampling) {#a5-data-generation-random-sampling}
 
-
+```{=tex}
 \begin{equation}
 A5: {y_i,x_{i1},...,x_{ik-1}: i = 1,..., n}
 (\#eq:A5)
 \end{equation}
-
-
-
+```
 is a random sample
 
 -   random sample mean samples are independent and identically distributed (iid) from a joint distribution of $(y,\mathbf{x})$
@@ -1292,14 +1280,12 @@ where $B= Var(z_t) + 2\sum_{h=1}^{\infty}Cov(z_t,z_{t-h})$
 
 #### A6 Normal Distribution {#a6-normal-distribution}
 
-
+```{=tex}
 \begin{equation}
 A6: \epsilon|\mathbf{x}\sim N(0,\sigma^2I_n)
 (\#eq:A6)
 \end{equation}
-
-
-
+```
 The error term is normally distributed
 
 From A1-A3, we have **identification** (also known as **Orthogonality Condition**) of the population parameter $\beta$
@@ -1432,7 +1418,7 @@ $$
 **Hierarchy of OLS Assumptions**
 
 | Identification Data Description | Unbiasedness Consistency  | [Gauss- Markov](#gauss-%20markov-theorem) (BLUE) Asymptotic Inference (z and Chi-squared) | Classical LM (BUE) Small-sample Inference (t and F) |
-|--------------|---------------|---------------------|-------------------|
+|-----------------|-----------------|---------------------|-------------------|
 | Variation in $\mathbf{X}$       | Variation in $\mathbf{X}$ | Variation in $\mathbf{X}$                                                                 | Variation in $\mathbf{X}$                           |
 |                                 | Random Sampling           | Random Sampling                                                                           | Random Sampling                                     |
 |                                 | Linearity in Parameters   | Linearity in Parameters                                                                   | Linearity in Parameters                             |
@@ -2251,7 +2237,7 @@ Hence, we need to make assumption on $\Omega$ to make it feasible to estimate $\
 
 ### Heteroskedasticity
 
-
+```{=tex}
 \begin{equation}
 \begin{aligned}
 Var(\epsilon_i |x_i) & = E(\epsilon^2|x_i) \neq \sigma^2 \\
@@ -2259,9 +2245,7 @@ Var(\epsilon_i |x_i) & = E(\epsilon^2|x_i) \neq \sigma^2 \\
 \end{aligned}
 (\#eq:h-var-error-term)
 \end{equation}
-
-
-
+```
 For our model,
 
 $$
@@ -2652,7 +2636,7 @@ $$
 \mathbf{wy = wX\beta + w\epsilon}
 $$
 
-**Properties of Feasible[ Prais Winsten](#feasiable-prais-winsten) Estimator**
+**Properties of Feasible[Prais Winsten](#feasiable-prais-winsten) Estimator**
 
 -   The Infeasible PW estimator is under A1-A3 for the unweighted equation
 -   The [FPW](#feasiable-prais-winsten) estimator is biased
@@ -3108,8 +3092,8 @@ $$
 
 -   Probit or Logit is consistent and asymptotically normal if
 
-    -   [A2 Full rank] holds: $E(x_i' x_i)$ exists and is non-singular
-    -   [A5 Data Generation (random Sampling)] (or [A5a]) holds: {y_i,x_i} are iid (or stationary and weakly dependent).
+    -   [A2 Full rank](#a2-full-rank) holds: $E(x_i' x_i)$ exists and is non-singular
+    -   [A5 Data Generation (random Sampling)](#a5-data-generation-random-sampling) (or [A5a]) holds: {y_i,x_i} are iid (or stationary and weakly dependent).
     -   Distributional assumptions on $\epsilon_i$ hold: Normal/Logistic and independent of $x_i$
 
 -   Under the same assumptions, Probit or Logit is also asymptotically efficient with asymptotic variance,
