--- a/14-hypothesis.Rmd
+++ b/14-hypothesis.Rmd
@@ -97,7 +97,7 @@ plot(q,
 abline(v = 0.2)
 ```
 
-![](images/nested_tests.jpg){style="display: block; margin: 1em auto" width="90%"}
+![](images/nested_tests.jpg){style="display: block; margin: 1em auto" width="600" height="400"}
 
 Figure from[@fox1997applied]
 
@@ -167,7 +167,7 @@ Three equivalent ways
 
 3.  Confidence Interval
 
-1.  Critical Value
+4.  Critical Value
 
 For a given significance level, will determine the critical value $(c)$
 
