--- a/24-regression-discontinuity.Rmd
+++ b/24-regression-discontinuity.Rmd
@@ -623,7 +623,7 @@ $$
 Y_i = \beta_0 + x_i \beta_1 + [I(x_i \ge c)]\beta_2 + \epsilon_i
 $$
 
-![](images/rd1.PNG){style="display: block; margin: 1em auto" width="90%"}
+![](images/rd1.PNG){style="display: block; margin: 1em auto" width="600" height="300"}
 
 RD gives you $\beta_2$ (causal effect) of $X$ on $Y$ at the cutoff point
 
@@ -633,7 +633,7 @@ $$
 Y_i = \alpha_0 + f(x) \alpha _1 + [I(x_i \ge c)]\alpha_2 + [f(x_i)\times [I(x_i \ge c)]\alpha_3 + u_i
 $$
 
-![](images/rd2.PNG){style="display: block; margin: 1em auto" width="90%"}
+![](images/rd2.PNG){style="display: block; margin: 1em auto" width="600" height="300"}
 
 where we estimate different slope on different sides of the line
 
