--- a/index.Rmd
+++ b/index.Rmd
@@ -36,8 +36,6 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE,cache = TRUE)
 
 <img src="images/cover.jpg" class="cover" width="250" height="328"/> This guide is an attempt to streamline and demystify the data analysis process. By no means this is the ultimate guide, or I am a great source of knowledge, or I claim myself to be a statistician/ econometrician, but I am a strong proponent of learning by teaching, and doing. Hence, this is more like a learning experience for both you and me. This book is completely free. My target audiences are those who have little to no experience in statistics and data science to those that have some interests in these fields and want to dive deeper and have a more holistic method. Even though my substantive domain of interest is marketing, this book can be used for other disciplines that use scientific methods or data analysis.
 
-
-
 ```{r, out.width='25%', fig.align='center', echo=FALSE}
 knitr::include_graphics('logo.png')
 ```
@@ -74,12 +72,12 @@ But to laymen, these are known as:
 
 It's all fun and exciting when I learned these new tools. But I have to admit that I hardly retain any of these new ideas. However, writing down from the beginning till the end of a data analysis process is the solution that I came up with. Accordingly, let's dive right in.
 
-```{r fig.align='center', echo=FALSE}
+![](images/meme.jpg){width="600" height="500"}
+
+```{r fig.align='center', echo=FALSE, include = FALSE}
 library("jpeg")
 knitr::include_graphics('images/meme.jpg')
 ```
-
-
 
 **Some general recommendations**:
 
@@ -124,8 +122,6 @@ knitr::write_bib(c(
 knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 ```
 
-
-
 **Code Replication**
 
 This book was built with `r R.version.string` and the following packages:
@@ -149,8 +145,6 @@ df <- tibble::tibble(
 )
 knitr::kable(df, format = "markdown")
 ```
-
-
 
 ```{r, echo=FALSE}
 devtools::session_info()
